custom-scheduler.yml
apiVersion: v1
kind: Pod
metadata:
    name: custom-scheduler
    namespace: kube-system
spec:
    container:
    -   command:
    -   --address=127.0.0.1
    -   --kubeconfig=/etc/kubernetes/scheduler.conf
    -   --leader-elect=true # This is used when you have multiple copies of scheduler in master node
    -   --scheduler-name=custom-scheduler
    -   --lock-object-name=custome-scheduler
    image: k8s.gcr.io/kube-scheduler-amd64:v1.11.3
    name: kube-scheduler
