deployment-definition.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: myapp
    type: front-end

spec:
  replicas: 3
  selector:   
    matchLabels:
      type: front-end 

  template:
    metadata:
      name: myapp-pod
      label:
        app: myapp
        type: front-end
    spec:
      containers:
      - name: nginx-container
        image: nginx
