kube-scheduler.yml
apiVersion: v1
kind: Pod
metadata:
    name: kube-scheduler
    namespace: kube-system
spec:
    container:
    -   command:
    -   --address=127.0.0.1
    -   --kubeconfig=/etc/kubernetes/scheduler.conf
    -   --leader-elect=true
    image: k8s.gcr.io/kube-scheduler-amd64:v1.11.3
    name: kube-scheduler
