node-affinity.yml
apiVersion: v1
kind: Pod
metadata:
  name: happypanda
  labels:
    app: redis    
    segment: backend
    company: mycompany    
    disk: ssd
spec:
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 1
        preference:
          matchExpressions:
          - key: fruit
            operator: In
            values:
            - apple
  containers:
  - name: redis
    image: redis
    ports:
    - name: redisport
      containerPort: 6379
      protocol: TCP

# This manifest reads "If there are no nodes labelled as apple, then still schedule the pod to a node"
