pod-definition-2.yml
apiVersion: v1
kind: Pod
metadata:
    name: nginx
    labels:
        name: nginx
spec:
    container:
    -   name: nginx
        image: nginx
        port:
          - containerPort: 8080

    nodeName: node2
