pod-definition-resource-request.yml
apiVersion: v1
kind: Pod
metadata:
    name: simple-web-app-color
    labels:
      name: simple-web-app-color
spec:
    containers:
    -   name: simple-web-app-color
        image: simple-web-app-color
        ports:
          -   containerPort: 8080
        resources:
          requests:
            memory: "1Gi"
            cpu: 1
          limits:
            memory: "2Gi"
            cpu: 2
# The request and limits are set for each container within the pod
# This is a sample pod definition with resource request
