pod-hard-affinity.yml
apiVersion: v1
kind: Pod
metadata:
  name: happypanda
  labels:
    app: redis
    segment: backend
    company: mycompany
    disk: ssd
spec:
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        - labelSelector:
            matchExpressions:
            - key: fruit
              operator: In
              values:
              - apple
          topologyKey: kubernetes.io/hostname
  containers:
  - name: redis
    image: redis
    ports:
    - name: redisport
      containerPort: 6379
      protocol: TCP

# This is a hard pod affinity. If none of the nodes are labelled with fruit=apple, then the pod won't be scheduled. 
# The topologyKey is a label of a node, such as kubernetes.io/hostname
# Soft Pod Affinity will schedule the Pod even though is not finding a pod running with label fruit=apple
