pod.yml
apiVersion: v1
kind: Pod
metadata:
    name: hello-pod
spec:
    containers:
    -   name: hello-ctr
        image: nigelpoulton/pluralsight-docker-ci:latest
        ports:
        - containerPort: 8080
