ingress-rule.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-path-rule
spec:
  rules:
  - http:
      paths:
      - path: /wear
        backend:
          serviceName: ingress-service
          servicePort: 80
      - path:
        backend:
          serviceName: ingress-service
          servicePort: 80
